[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitcoincash-addr = "0.5.2"
clap = "4.5.2"
env_logger = "0.11.3"
failure = "0.1.8"
log = "0.4.21"
merkle-cbt = "0.3.2"
hex = "0.4"
merkletree = "0.23.0"
rand = "0.8.5"
rust-crypto = "0.2.36"
serde = {version="1.0.114",features= ["derive"]}
serde_derive = "1.0"
serde_json = "1.0.114"
sha2 = "0.10.8"
sled = "0.34.7"
[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
